--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   </header>
 
   <main>
-    <p>HTML Project</a>.</p>
-  </main>
+    <p>HTML Project</p>
 
-  <footer>
     <p>Website that I made in 5 mins.</p>
-  </footer>
+  </main>
 </body>
 </html>
