--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </header>
 
   <main>
-    <p>HTML Project</p>
+    <p>HTML Project</a>.</p>
 
     <p>Website that I made in 5 mins.</p>
   </main>
