--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   <main>
     <p>HTML Project</a>.</p>
-
-    <p>Website that I made in 5 mins.</p>
   </main>
+
+  <footer>
+    <p>Website that I made in 5 mins.</p>
+  </footer>
 </body>
 </html>
