--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
   <main>
     <p>HTML Project</a>.</p>
+
+    <h1>H1 Tester</h1>
+    <h2>H2 Tester</h2>
+    <h3>H3 Tester</h3>
+    <h4>H4 Tester</h4>
+    <h5>H5 Tester</h5>
+    <h6>H6 Tester</h6>
+    
+    <p>P Tester</p>
+
   </main>
 
   <footer>
